--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <!-- <img src=images/anglea.png> -->
-      <td><img src="./img/UPSrepair.png" alt="CM UPS Repair" width="200"></td>
+      <td><img src="img/UPSrepair.png" alt="CM UPS Repair" width="200"></td>
       <td><h1> Cesar Monge</h1>
       <p><em>Founder and <strong><a href="https://www.appbrewery.co"> of CM Webdesign</a></strong></em></p>
     <p>I'm am iOS and Web developer. I Love coffee and brew my onw beer</p></td>
